# Prymal

./: .gitignore  README.md  pyproject.toml
Examples/: index.py
prymal/: application.py  component.py  elements.py  styles.py
prymal/core/: component.py  element.py  elements.py  events.py  style.py  utils.py
prymal/core/rendering/: web_renderer.py
prymal/html/: html_tags.py
pryml/: csscore.py  html_core.py  html_tags.py
pryml/_old/: html_tags.py
pryml/core/: elements.py  style.py
