[project]
name = "prymal"
description = "Python UI framework designed to revolutionize frontend development by providing a abstract and versatile approach to building user interfaces."
version = "0.1.0"
authors = ["Justin M Bacher"]
license = "LGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = [
    "jinja", "htmx", "ui", "framework", "ui"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Web Environment",
    "Framework :: Prymal",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "litestar",
    "watchfiles",
]


[project.optional-dependencies]
lint = [
    "isort",
]

[tool.ruff]
line-length = 100
src = ["prymal", "tests"]
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 100

