[project]
name = "prymal"
requires-python = ">=3.10,<4.0"
description = "Python UI framework designed to revolutionize frontend development by providing a abstract and versatile approach to building user interfaces."
version = "0.1.0"
authors = [
    {name = "Justin M Bacher", email = "92jbach@gmail.com"},
]
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = [
    "jinja", "htmx", "ui", "framework", "ui"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Web Environment",
    "Framework :: Prymal",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "litestar",
    "watchfiles",
]

[project.urls]
Homepage = "https://github.com/JustinBacher/Prymal"

[project.optional-dependencies]
lint = [
    "isort",
]

[tool.ruff]
line-length = 100
src = ["prymal", "tests"]
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = true

[tool.mypy]
strict = true
warn_return_any = false
show_error_codes = true

[[tool.mypy.overrides]]
ignore_missing_imports = true